# JavisGPT

./: .gitignore  README.md  index.html  pyproject.toml  requirements.txt
assets/css/: index-gradio.css
interface/: javisdit_interface.py
interface/config/: javisdit_v0.1.py  javisdit_v0.1_textonly.py
javisgpt/: constants.py  mm_utils.py  utils.py
javisgpt/eval/: dataset.py  eval_und.py  infer_gen.py  infer_und.py
javisgpt/model/: __init__.py  blocks.py  javisgpt_arch.py  processing_model.py
javisgpt/model/beats/: BEATs.py  backbone.py
javisgpt/model/qwen2_5_vl/: modeling_qwen2_5_vl.py  modular_qwen2_5_vl.py
javisgpt/model/qwen2_vl/: image_processing_qwen2_vl.py  modeling_qwen2_vl.py
javisgpt/train/: ckpt_utils.py  llava_trainer.py  train_audio_video.py
scripts/: zero0.json  zero2.json
scripts/demo/: demo_audio_visual.sh
scripts/eval/: eval_metrics.sh  infer_av_gen.sh  infer_av_und.sh
scripts/train/: stage1_mm_pt.sh  stage2_av_ft.sh  stage3_mm_it.sh  train_audio_align.sh  train_audio_video_gen_align.sh  train_audio_video_instruct.sh  train_audio_video_und_align.sh
tools/: audio_visual_demo.py  merge_lora_weights.py
